<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_background_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationFrequencyActivity"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:gravity="center">

        <TextView
            android:textSize="32sp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:id="@+id/notification_frequency_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_notification_frequency"
            android:layout_marginBottom="16dp"/>

        <RadioGroup
            android:id="@+id/frequency_group"
            android:layout_below="@id/notification_frequency_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:id="@+id/daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/frequency_daily" />

            <RadioButton
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:id="@+id/few_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/frequency_few_days" />

            <RadioButton
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:id="@+id/weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/frequency_weekly" />

            <RadioButton
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:id="@+id/never"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/frequency_never" />
        </RadioGroup>

        <Button
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/save_notification_frequency_btn"
            android:layout_below="@id/frequency_group"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/save_notification_frequency"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</RelativeLayout>