<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ViewEntryActivity" >

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/diary_entry_date"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:text="@string/diary_entry_Mood"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/recorded_mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mood"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/mood"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mood"
        android:layout_marginTop="20dp"

        android:text="@string/diary_entry_location"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/recorded_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/location"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/location"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/open_ended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location"
        android:layout_marginTop="20dp"

        android:text="@string/diary_entry_thoughts"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>