<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_settings"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:gravity="center">


    <Button
        android:id="@+id/change_pass_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimaryDark"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/change_frequency_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_pass_button"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimaryDark"
        android:text="@string/change_notif_freq"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/change_notiftimebutton"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_frequency_button"
        android:background="@color/colorPrimaryDark"
        android:text="@string/change_notification_time"
        android:textColor="@color/white"
        android:textStyle="bold"/>
</RelativeLayout>