<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/logo"
                android:layout_marginTop="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_logo"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_below="@id/logo"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:textColor="@color/white"
                    android:theme="@style/EditTextTheme"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_input_layout"
                android:layout_below="@id/email_input_layout"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:textColor="@color/white"
                    android:theme="@style/EditTextTheme"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_log_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_below="@id/password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/log_in_button"
                android:layout_below="@id/forgot_password"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"
                style="?android:textAppearanceSmall"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_log_in"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sign_up_link"
                android:layout_marginTop="20dip"
                android:layout_below="@id/log_in_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sign_up_text_field"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>