<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="460dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="62dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="38dp" />

        <Button
            android:id="@+id/reset_password"
            style="@android:style/TextAppearance.Material.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_reset_password"
            app:layout_constrainedHeight="false"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="141dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="39dp" />

        <Button
            android:id="@+id/forgot_pass_cancel"
            style="@android:style/TextAppearance.Material.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_button"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="208dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>